issue#256: solve search bar spill over page boundaries

--- a/app/assets/stylesheets/osu.scss
+++ b/app/assets/stylesheets/osu.scss
@@ -31,7 +31,7 @@ div#masthead.container-fluid > .row{
 }
 
 .input-group {
-  width: 650px;
+  width: auto;
 }
 
 .author > fieldset > .listing > .field-wrapper > .input-group-btn{
